crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/cannot_call_via_contract_type_name/foreign_contract/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 3

Error: Cannot call function via contract type name.
    ╭─[input.sol:13:9]
    │
 13 │         A.f();
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯

Error: Cannot call function via contract type name.
    ╭─[input.sol:14:9]
    │
 14 │         A.g();
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯

Error: Cannot call function via contract type name.
    ╭─[input.sol:15:9]
    │
 15 │         A.h();
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯
